--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -34,6 +34,8 @@ jobs:
 
     env:
       NOTION_PAGE_ID: ${{ secrets.NOTION_PAGE_ID }}
+      NEXT_PUBLIC_GOOGLE_MEASUREMENT_ID: ${{secrets.NEXT_PUBLIC_GOOGLE_MEASUREMENT_ID}}
+      NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION: ${{secrets.NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION}}
 
     steps:
       - name: Checkout
